--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,18 @@
             <version>4.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.epam.reportportal</groupId>
+            <artifactId>agent-java-testng</artifactId>
+            <version>5.0.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.epam.reportportal</groupId>
+            <artifactId>logger-java-log4j</artifactId>
+            <version>5.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <reporting>
